--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,48 @@
+[noscroll] {
+  overflow: hidden;
+}
 
+ion-content {
+ // --background: #f5f5f5;
+}
+
+.page-wrap {
+  height: 100%;
+  overflow: hidden;
+  .product-image {
+    height: 70%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  }
+
+  .product-name {
+    height: 20%;
+    h1 {
+      color: #4b4b4b;
+      margin-top: 1rem;
+      margin-left: 1rem;
+      font-size: 3rem;
+    }
+
+    h1.sline {
+      margin-left: 5rem;
+      margin-top: -7px;
+    }
+  }
+
+ 
+}
+
+ion-button{
+   color:#fff !important;
+}
+
+// :host(.button-clear) {
+//     --border-width: 0;
+//     --background: transparent;
+//     --color: #fff !important;
+// }
