--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,12 +20,12 @@
   --ion-color-secondary-tint: #24d6ea;
 
   /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
+  --ion-color-tertiary: #8A56AC;
+  --ion-color-tertiary-rgb: 138,86,172;
   --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
+  --ion-color-tertiary-contrast-rgb: 255,255,255;
+  --ion-color-tertiary-shade: #794c97;
+  --ion-color-tertiary-tint: #9667b4;
 
   /** success **/
   --ion-color-success: #10dc60;
